// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createBidaskShape > both sides of active bin > return the correct shape #1 1`] = `
{
  "222": [
    0n,
    336271730n,
  ],
  "223": [
    0n,
    305701573n,
  ],
  "224": [
    0n,
    275131416n,
  ],
  "225": [
    0n,
    244561258n,
  ],
  "226": [
    0n,
    213991101n,
  ],
  "227": [
    0n,
    183420944n,
  ],
  "228": [
    0n,
    152850786n,
  ],
  "229": [
    0n,
    122280629n,
  ],
  "230": [
    0n,
    91710472n,
  ],
  "231": [
    0n,
    61140314n,
  ],
  "232": [
    3637590n,
    12939772n,
  ],
  "233": [
    25879543n,
    0n,
  ],
  "234": [
    38819314n,
    0n,
  ],
  "235": [
    51759086n,
    0n,
  ],
  "236": [
    64698857n,
    0n,
  ],
  "237": [
    77638629n,
    0n,
  ],
  "238": [
    90578400n,
    0n,
  ],
  "239": [
    103518172n,
    0n,
  ],
  "240": [
    116457944n,
    0n,
  ],
  "241": [
    129397715n,
    0n,
  ],
  "242": [
    142337487n,
    0n,
  ],
  "243": [
    155277258n,
    0n,
  ],
}
`;

exports[`createBidaskShape > both sides of active bin > return the correct shape #2 1`] = `
{
  "224": [
    0n,
    367517678n,
  ],
  "225": [
    0n,
    326682380n,
  ],
  "226": [
    0n,
    285847083n,
  ],
  "227": [
    0n,
    245011785n,
  ],
  "228": [
    0n,
    204176488n,
  ],
  "229": [
    0n,
    163341190n,
  ],
  "230": [
    0n,
    122505892n,
  ],
  "231": [
    0n,
    81670595n,
  ],
  "232": [
    57136163n,
    203246905n,
  ],
  "233": [
    406493810n,
    0n,
  ],
  "234": [
    609740716n,
    0n,
  ],
  "235": [
    812987621n,
    0n,
  ],
  "236": [
    1016234526n,
    0n,
  ],
  "237": [
    1219481432n,
    0n,
  ],
  "238": [
    1422728337n,
    0n,
  ],
  "239": [
    1625975243n,
    0n,
  ],
  "240": [
    1829222148n,
    0n,
  ],
}
`;

exports[`createBidaskShape > left side of active bin > excluding active bin 1`] = `
{
  "223": [
    0n,
    370370370n,
  ],
  "224": [
    0n,
    333333333n,
  ],
  "225": [
    0n,
    296296296n,
  ],
  "226": [
    0n,
    259259259n,
  ],
  "227": [
    0n,
    222222222n,
  ],
  "228": [
    0n,
    185185185n,
  ],
  "229": [
    0n,
    148148148n,
  ],
  "230": [
    0n,
    111111111n,
  ],
  "231": [
    0n,
    74074074n,
  ],
}
`;

exports[`createBidaskShape > left side of active bin > ignore tokens from right side 1`] = `
{
  "233": [
    25974025n,
    0n,
  ],
  "234": [
    38961038n,
    0n,
  ],
  "235": [
    51948051n,
    0n,
  ],
  "236": [
    64935064n,
    0n,
  ],
  "237": [
    77922077n,
    0n,
  ],
  "238": [
    90909090n,
    0n,
  ],
  "239": [
    103896103n,
    0n,
  ],
  "240": [
    116883116n,
    0n,
  ],
  "241": [
    129870129n,
    0n,
  ],
  "242": [
    142857142n,
    0n,
  ],
  "243": [
    155844155n,
    0n,
  ],
}
`;

exports[`createBidaskShape > left side of active bin > including active bin 1`] = `
{
  "223": [
    0n,
    72727272n,
  ],
  "224": [
    0n,
    65454545n,
  ],
  "225": [
    0n,
    58181818n,
  ],
  "226": [
    0n,
    50909090n,
  ],
  "227": [
    0n,
    43636363n,
  ],
  "228": [
    0n,
    36363636n,
  ],
  "229": [
    0n,
    29090909n,
  ],
  "230": [
    0n,
    21818181n,
  ],
  "231": [
    0n,
    14545454n,
  ],
  "232": [
    451831705n,
    1607272727n,
  ],
}
`;

exports[`createBidaskShape > right side of active bin > excluding active bin 1`] = `
{
  "233": [
    30769230n,
    0n,
  ],
  "234": [
    46153846n,
    0n,
  ],
  "235": [
    61538461n,
    0n,
  ],
  "236": [
    76923076n,
    0n,
  ],
  "237": [
    92307692n,
    0n,
  ],
  "238": [
    107692307n,
    0n,
  ],
  "239": [
    123076923n,
    0n,
  ],
  "240": [
    138461538n,
    0n,
  ],
  "241": [
    153846153n,
    0n,
  ],
  "242": [
    169230769n,
    0n,
  ],
}
`;

exports[`createBidaskShape > right side of active bin > ignore tokens from left side 1`] = `
{
  "233": [
    25974025n,
    0n,
  ],
  "234": [
    38961038n,
    0n,
  ],
  "235": [
    51948051n,
    0n,
  ],
  "236": [
    64935064n,
    0n,
  ],
  "237": [
    77922077n,
    0n,
  ],
  "238": [
    90909090n,
    0n,
  ],
  "239": [
    103896103n,
    0n,
  ],
  "240": [
    116883116n,
    0n,
  ],
  "241": [
    129870129n,
    0n,
  ],
  "242": [
    142857142n,
    0n,
  ],
  "243": [
    155844155n,
    0n,
  ],
}
`;

exports[`createBidaskShape > right side of active bin > including active bin 1`] = `
{
  "232": [
    562234022n,
    2000000000n,
  ],
  "233": [
    13469722n,
    0n,
  ],
  "234": [
    20204583n,
    0n,
  ],
  "235": [
    26939444n,
    0n,
  ],
  "236": [
    33674306n,
    0n,
  ],
  "237": [
    40409167n,
    0n,
  ],
  "238": [
    47144028n,
    0n,
  ],
  "239": [
    53878889n,
    0n,
  ],
  "240": [
    60613750n,
    0n,
  ],
  "241": [
    67348612n,
    0n,
  ],
  "242": [
    74083473n,
    0n,
  ],
}
`;
